# heddle-lang

./: .flake8  .gitignore  AGENTS.md  Makefile  README.md  example.he  go.mod  go.sum  go.work  go.work.sum  main.py  mkdocs.yml  pyproject.toml  test.sh
cmd/: client.go  cluster.go  cluster_cp.go  cluster_worker.go  debug.go  lsp.go  main.go  standalone.go
cmd/cluster/: client.go  cluster.go  controle_plane.go  controlplane.go  cp.go  worker.go
cmd/completion/: completion.go
cmd/dev/: dap.go  dap_test.go  debug.go  dev.go  init.go  lsp.go  watch.go  watch_test.go  worker.go
cmd/development/: debug.go  development.go  lsp.go
cmd/heddle/: main.go
cmd/initcmd/: init.go
cmd/inspect/: inspect.go
cmd/local/: local.go  local_test.go
cmd/run/: run.go  run_test.go
cmd/workflow/: init.go  run.go  run_test.go  workflow.go
docs/: examples.md  grammar.lark  index.md
docs/grammar/: grammar.md  lang-spec.md
editors/vscode/: extension.js  language-configuration.json  package.json
examples/: login.he  register.he  test.he  without_modules.he
internal/client/: client.go  client_test.go
internal/config/: config.go  config_test.go
internal/control-plane/: control_plane.go  control_plane_test.go  queue.go  queue_test.go  registry.go
internal/controlplane/: control_plane.go  (+1 more)
language/: __init__.py  anonymous_scope.py  grammar.lark  grammar.py  interpreter.py  let_statement.py  memory.py  mock_modules.py  pipeline_statement.py  prql.py  value.py  variable_access.py  workflow_definition.py
services/relational-worker/: Cargo.toml
services/relational-worker/src/: executor.rs
src/: grammar.lark  main.py
test/: main.py  mock_modules.py  parse_grammar.py  util.py
(+536 files in other folders)
