[project]
name = "heddle"
version = "0.1.0"
description = ""
authors = [
    {name = "André R. de Miranda",email = "andre@galgo.tech"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "lark (>=1.3.0,<2.0.0)",
    "prql (>=0.1.12,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.7"