[package]
name = "relational-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
prost = "0.13"
arrow = { version = "53.0" }
arrow-flight = { version = "53.0" }
datafusion = { version = "43.0" }
prql-compiler = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memmap2 = "0.9"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"
